--- a/pyproject.toml
+++ b/pyproject.toml
@@ -32,7 +32,7 @@ dependencies = [
     "sniffio >= 1.1",
     "typing_extensions >= 4.5; python_version < '3.13'",
 ]
-dynamic = ["version"]
+version = "4.7.1"
 
 [project.urls]
 Documentation = "https://anyio.readthedocs.io/en/latest/"
